--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.14",
     "vue-monthly-picker": "^0.2.8",
     "vue-router": "^3.2.0",
+    "vue-uuid": "^2.0.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
