--- a/package.json
+++ b/package.json
@@ -41,5 +41,18 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "description": "```\r npm install\r ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/otnielpangkung/kallaClient.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/otnielpangkung/kallaClient/issues"
+  },
+  "homepage": "https://github.com/otnielpangkung/kallaClient#readme"
 }
